force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__CorpCrcyCnvTotWithTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CorpCrcyCnvTotWithTaxAmount__c</fullName>
    <label>Corp Currency Cnvsn Tot Amount With Tax</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CorpCrcyCnvTotWithTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>