force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__CorporateCurrencyCvsnDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CorporateCurrencyCvsnDate__c</fullName>
    <label>Corporate Currency Cvsn Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CorporateCurrencyCvsnDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>