force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__CreditDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditDate__c</fullName>
    <label>Credit Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreditDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>