force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__CreditMemoApiType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditMemoApiType__c</fullName>
    <label>Api Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreditMemoApiType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>