force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__CreditMemoStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreditMemoStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreditMemoStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>