force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__Currency__c.field-meta.xml
<CustomField>
    <fullName>ssot__Currency__c</fullName>
    <label>Currency Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Currency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>