force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__ExternalReferenceDataSourceText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExternalReferenceDataSourceText__c</fullName>
    <label>External Reference Data Source</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExternalReferenceDataSourceText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>