force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__ReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceObject__c</fullName>
    <label>Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>