force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__TaxLocaleType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxLocaleType__c</fullName>
    <label>Tax Locale Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxLocaleType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>