force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__TotalChargeTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalChargeTaxAmount__c</fullName>
    <label>Total Charge Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalChargeTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>