force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__TotalCreditAppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalCreditAppliedAmount__c</fullName>
    <label>Total Credit Amount Applied</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalCreditAppliedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>