force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__TotAppliedCrMemoLineAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotAppliedCrMemoLineAmount__c</fullName>
    <label>Total Applied Credit Memo Line Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotAppliedCrMemoLineAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>