force-app/main/default/objects/ssot__CreditMemo__dlm/fields/ssot__TotUnappliedCrMemoLineAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotUnappliedCrMemoLineAmount__c</fullName>
    <label>Total Unapplied Credit Memo Line Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotUnappliedCrMemoLineAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>